fix charts to work on mobile

--- a/src/Components/AddActivity/AddActivity.css
+++ b/src/Components/AddActivity/AddActivity.css
@@ -33,6 +33,7 @@
   margin: 0;
   height: 25px;
   border: none;
+  font-size: 16px;
 }
 
 .AddActivityLabel {
@@ -50,4 +51,5 @@ input {
   padding: 0;
   margin: 0;
   height: 25px;
+  font-size: 16px;
 }
