--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -29,6 +29,10 @@
         margin-top: 1rem;
         padding: 3rem 4rem 3rem 4rem;
     }
+
+    .LoginInput {
+        font-size: 16px;
+    }
 }
 
 .LoginTitle {
